(library
 (name http_client)
 (public_name http_client.client)
 (libraries
  core
  core_kernel.limiter
  async
  async-uri
  async_kernel.limiter_async
  uri
  httpaf
  httpaf-async)
 (inline_tests)
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ppx_hash
   ppx_bin_prot
   ppx_inline_test
   ppx_log)))
