(library
 (name http_client)
 (public_name http_client.http_client)
 (modules http_client pool)
 (libraries
  core
  async
  async-uri
  uri
  http_client.http_backend_intf
  http_client.request_id
  http_client.weighted_async_rate_limiter
  cohttp-async)
 (preprocess (pps ppx_jane ppx_log)))

(library
 (name http_client_test)
 (public_name http_client.http_client_test)
 (modules http_client_test)
 (libraries http_client.httpmock)
 (inline_tests)
 (preprocess (pps ppx_jane)))
